# primitive_merging

./: README.md
cpp/: CMakeLists.txt  README  main.cpp  surface_comparator_KS.h  surface_comparator_MW.h
java/: Primitive_Fusion_example.java  README
java/primitives_compare/: Surface.java  surface_comparator_KS.java  surface_comparator_MW.java
